# cyber-incident-storyteller

./: .dockerignore  .gitignore  404.html  CLAUDE.md  Dockerfile  README.md  index.html  mitre-coverage-layer.json  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml  release.yml  test.yml
benchmarks/: index.html
cli-reference/: index.html
detection-coverage/: index.html
detection-coverage-matrix/: index.html
docs/: benchmarks.md  cli-reference.md  detection-coverage-matrix.md  detection-coverage.md  forensic-integrity.md  index.md  mitre-coverage-layer.json  quickstart.md  roadmap.md  sample-report.md  supported-formats.md
docs/stylesheets/: cyber.css
forensic-integrity/: index.html
quickstart/: index.html
roadmap/: index.html
sample-report/: index.html
search/: search_index.json
src/: __init__.py  behavioral_detector.py  coverage.py  generate_lab.py  hunter.py  ingest.py  lolbins.py  mitre.py  parser.py  reporter.py  schema.py  signature_filters.py  storyteller.py  sysmon_evtx.py
supported-formats/: index.html
tests/: audit_evtx_coverage.py  conftest.py  corpus_stats.py  download_evtx_fixtures.py  test_cli.py  test_evtx_corpus.py  test_evtx_parser.py  test_evtx_real_samples.py  test_evtx_sysmon.py  test_host_parsers.py  test_hunter.py  test_hunter_lolbin_enrichment.py  test_ingest.py  test_mitre.py  test_parser.py  test_reporter.py  test_review_bugs.py  test_schema.py  test_storyteller.py  test_sysmon_parser.py
tests/benchmarks/: bench_pipeline.py
