[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ais-storyteller"
version = "0.1.0"
description = "Autonomous incident reconstruction — turns raw Linux host logs into MITRE-mapped attack narratives"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["dfir", "security", "incident-response", "mitre-attack", "forensics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pandas>=2.0",
    "python-dateutil>=2.8",
    "tabulate>=0.9",
    "python-evtx>=0.8.0",
]

[project.scripts]
ais = "storyteller:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
docs = [
    "mkdocs-material>=9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that run the full EVTX corpus (~3 min); deselect with -m 'not slow'",
]
